objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>ASI LUX %28HK%29 Lead Process</fullName>
        <description>ASI LUX (HK) Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified - Convert</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>ASI LUX %28Regional%29 Lead Process</fullName>
        <description>ASI LUX (Regional) Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified - Convert</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>BRA Standard</fullName>
        <description>BRA Standard Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contatado</fullName>
        </values>
        <values>
            <fullName>Em aberto</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Não qualificado</fullName>
        </values>
        <values>
            <fullName>Qualificado</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ASI_BRD_Absolut_AllMkt_OptIn__c</fullName>
        <label>Absolut Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Absolut_Engaged__c</fullName>
        <label>Absolut Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Acquired_By__c</fullName>
        <label>Acquisition Brand</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aberlour</fullName>
                </value>
                <value>
                    <fullName>Absolut</fullName>
                </value>
                <value>
                    <fullName>Ballantine&apos;s</fullName>
                </value>
                <value>
                    <fullName>G.H.Mumm</fullName>
                </value>
                <value>
                    <fullName>Jacob&apos;s Creek</fullName>
                </value>
                <value>
                    <fullName>Martell</fullName>
                </value>
                <value>
                    <fullName>Perrier-Jouët</fullName>
                </value>
                <value>
                    <fullName>Royal Salute</fullName>
                </value>
                <value>
                    <fullName>The Glenlivet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Acquisition_Campaign__c</fullName>
        <label>Acquisition Campaign</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_Ballantines_AllMkt_OptIn__c</fullName>
        <label>Ballantine&apos;s Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Ballantines_Engaged__c</fullName>
        <label>Ballantine&apos;s Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Beefeater_AllMkt_OptIn__c</fullName>
        <label>Beefeater Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Beefeater_Engaged__c</fullName>
        <label>Beefeater Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Chivas_AllMkt_OptIn__c</fullName>
        <label>Chivas Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Chivas_Engaged__c</fullName>
        <label>Chivas Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Country_of_Residence__c</fullName>
        <label>Country of Residence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina Faso</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Cape Verde</fullName>
                </value>
                <value>
                    <fullName>Central African Republic</fullName>
                </value>
                <value>
                    <fullName>Chad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_GHMumm_AllMkt_OptIn__c</fullName>
        <label>G.H.Mumm Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_GHMumm_Engaged__c</fullName>
        <label>G.H.Mumm Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_HavanaClub_AllMkt_OptIn__c</fullName>
        <label>Havana Club Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_HavanaClub_Engaged__c</fullName>
        <label>Havana Club Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_HomeAddr_City_Town__c</fullName>
        <label>Home Address (City/Town)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_HomeAddr_Postal_Code__c</fullName>
        <label>Home Address (Postal Code)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_HomeAddr_Province_PrefectureStat__c</fullName>
        <label>Home Address (Province/Prefecture/State)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_HomeAddr_Room_Flat_Bldg_Estate__c</fullName>
        <label>Home Address (Room/Flat/Building/Estate)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_HomeAddr_Street_Number_St_Nam__c</fullName>
        <label>Home Address (Street Number/Street Name)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_Jameson_AllMkt_OptIn__c</fullName>
        <label>Jameson Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Jameson_Engaged__c</fullName>
        <label>Jameson Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Kahlua_AllMkt_OptIn__c</fullName>
        <label>Kahlua Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Kahlua_Engaged__c</fullName>
        <label>Kahlua Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Lead_Record_Type__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <label>Sys_Lead Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_Malibu_AllMkt_OptIn__c</fullName>
        <label>Malibu Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Malibu_Engaged__c</fullName>
        <label>Malibu Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Martell_AllMkt_OptIn__c</fullName>
        <label>Martell Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Martell_Engaged__c</fullName>
        <label>Martell Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_OtherBrand1_AllMkt_OptIn__c</fullName>
        <label>Other Brand 1 Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_OtherBrand1_Engaged__c</fullName>
        <label>Other Brand 1 Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_OtherBrand2_AllMkt_OptIn__c</fullName>
        <label>Other Brand 2 Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_OtherBrand2_Engaged__c</fullName>
        <label>Other Brand 2 Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_OtherBrand3_AllMkt_OptIn__c</fullName>
        <label>Other Brand 3 Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_OtherBrand3_Engaged__c</fullName>
        <label>Other Brand 3 Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_PerrierJouet_AllMkt_OptIn__c</fullName>
        <label>Perrier Jouet Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_PerrierJouet_Engaged__c</fullName>
        <label>Perrier Jouet Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Phone_Business__c</fullName>
        <label>Phone (Business)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_Preferred_Gin_1__c</fullName>
        <label>Preferred Gin 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_Preferred_Gin_2__c</fullName>
        <label>Preferred Gin 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_Preferred_Rum_1__c</fullName>
        <label>Preferred Rum 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_Preferred_Rum_2__c</fullName>
        <label>Preferred Rum 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_Preferred_Tequila_1__c</fullName>
        <label>Preferred Tequila 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_Preferred_Tequila_2__c</fullName>
        <label>Preferred Tequila 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_Primary_Market__c</fullName>
        <label>Acquisition Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taiwan</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Philippines</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Ricard_AllMkt_OptIn__c</fullName>
        <label>Ricard Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Ricard_Engaged__c</fullName>
        <label>Ricard Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_RoyalSalute_AllMkt_OptIn__c</fullName>
        <label>Royal Salute Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_RoyalSalute_Engaged__c</fullName>
        <label>Royal Salute Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Social_Media_Account_Instagram__c</fullName>
        <label>Social Media Account (Instagram)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_Social_Media_Account_Twitter__c</fullName>
        <label>Social Media Account (Twitter)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_Social_Media_Account_Wechat__c</fullName>
        <label>Social Media Account (Wechat)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_Social_Media_Account_Weibo__c</fullName>
        <label>Social Media Account (Weibo)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_Spouse_Birthday_Year__c</fullName>
        <label>Spouse Birthday (Year)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_Sys_Lead_Auto_Convert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Lead Auto Convert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_BRD_Sys_Target_Account_Record_Type__c</fullName>
        <label>Sys_Target Account Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASI_BRD_TW_Generic_CRM_Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_TheGlenlivet_AllMkt_OptIn__c</fullName>
        <label>The Glenlivet Opt-In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_TheGlenlivet_Engaged__c</fullName>
        <label>The Glenlivet Engaged</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_BRD_Tribe_Interest_Others__c</fullName>
        <label>Tribe Interest (Others)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Age_Range__c</fullName>
        <label>Age Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>18-25</fullName>
                </value>
                <value>
                    <fullName>26-35</fullName>
                </value>
                <value>
                    <fullName>36-50</fullName>
                </value>
                <value>
                    <fullName>50+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Birthday_Day__c</fullName>
        <label>Birthday (Day)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Birthday_Month__c</fullName>
        <label>Birthday (Month)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Birthday_Year__c</fullName>
        <label>Birthday (Year)</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Brand_Info_Subscription__c</fullName>
        <label>Brand Info Subscription</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PJ Facebook</fullName>
                </value>
                <value>
                    <fullName>PJ Newsletter</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Advertisement Online</fullName>
                </value>
                <value>
                    <fullName>Newsletters</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Building_Floor_Number__c</fullName>
        <label>Building &amp; Floor Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_CRM_Acceptance__c</fullName>
        <label>CRM Acceptance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LV1</fullName>
                </value>
                <value>
                    <fullName>LV2</fullName>
                </value>
                <value>
                    <fullName>LV3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_LUX_Children_s_Names__c</fullName>
        <label>Children&apos;s Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Company_Address__c</fullName>
        <label>Company Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_LUX_Company_Division__c</fullName>
        <label>Company Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>